--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,8 +17,14 @@
 
 .header-area{
     padding-top: 50px;
-}
+} 
 
 .logo{
     color: black;
+}
+
+
+.menu-area{
+    background-color: white;
+    opacity: .85;
 }
